# chatflow-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  Caddyfile  Dockerfile  Makefile  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.windsurf/plans/: socks5-proxy-a231d7.md
migrations/: env.py
migrations/versions/: 40d4c6d224e6_create_projects_table.py  6701424cfae4_add_module_type_and_config_to_bot_.py  6cfa70eeaba2_add_max_id_to_users_and_mx_messenger_.py  a0a47d65779a_add_secret_to_bot_instances.py  a74e7b155310_seed_default_bot_and_user.py  bbcf13923d1a_add_allowed_modules_to_companies.py  c3f8a1d2e9b4_change_bot_config_to_jsonb.py  e8c6f29cf841_add_multi_tenant_schema_with_companies_.py
src/chatflow_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/core/domain/: __init__.py  ai.py  bot_instance.py  company.py  incoming.py  messenger.py  project.py  user.py
src/core/services/: otp.py  (+2 more)
src/infrastructure/: config.py  redis.py
tests/: conftest.py  test_web_pages.py
tests/integration/: test_auth_api.py  test_celery_compile.py  test_hooks_api.py  test_models.py  test_otp_api.py  test_user_repository.py
tests/unit/: test_ai_adapter.py  test_base_http_adapter.py  test_celery_tasks.py  test_delivery.py  test_document_parsers.py  test_format_finance_text.py  test_hook_router.py  test_max_adapter.py  test_messenger_link.py  test_otp_service.py  test_riva_adapter.py  test_session_service.py  test_stt_adapter.py  test_telegram_adapter.py  test_user_manager.py  test_yandex_adapter.py
(+63 files in other folders)
