[project]
name = "chatflow-ai"
version = "0.1.0"
description = "AI-powered chat workflow engine built on FastAPI"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "fastapi>=0.135.2",
    "fastapi-users[sqlalchemy]>=14.0",
    "httpx>=0.28.1",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.13.1",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.42.0",
]

[dependency-groups]
main = []
dev = [
    "celery-types>=0.26.0",
    "fakeredis[lua]>=2.26.0",
    "pre-commit>=4.5.1",
    "psycopg2-binary>=2.9.10",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.2",
    "ruff>=0.15.8",
    "ty>=0.0.26",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
# Указываем ruff, что корни исходников в src
src = ["src"]

[tool.ruff.lint.isort]
known-first-party = ["core", "presentation", "infrastructure"]

[tool.ty.environment]
python-version = "3.14"
root = ["src"]

[tool.ty.rules]
# Allow forward references in string form (standard SQLAlchemy pattern)
unresolved-reference = "warn"

# SQLAlchemy comparison expressions return bool at runtime
# but type as ColumnElement[bool] — expected behavior
invalid-argument-type = "warn"
